<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="wit.ie.mightyangler.Fragments.AddDataFragment">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activities.AddDataEntry">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Species"
        android:layout_alignParentTop="true"
        android:layout_marginTop="48dp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView"
        android:layout_alignStart="@+id/edit_Weight" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_Weight"
        android:layout_below="@+id/edit_Species"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView2"
        android:layout_alignStart="@+id/edit_Bait" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Bait"
        android:layout_below="@+id/edit_Weight"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Location"
        android:layout_below="@+id/edit_Bait"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView4"
        android:layout_alignStart="@+id/edit_Bait" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_Weather"
        android:layout_below="@+id/edit_Location"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView5"
        android:layout_alignStart="@+id/edit_Location" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/edit_Date"
        android:drawableRight="@drawable/ic_insert_invitation_24dp"
        android:layout_below="@+id/edit_Weather"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView6"
        android:layout_alignStart="@+id/edit_Weather"
        android:onClick="datePicker" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit_Button"
        android:id="@+id/button_Add"
        android:layout_alignTop="@+id/button_ListAll"
        android:layout_toEndOf="@+id/textView"
        android:background="#769dd4"
        android:textColor="#fefafa" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Species"
        android:id="@+id/textView"
        android:layout_above="@+id/edit_Weight"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Weight"
        android:id="@+id/textView2"
        android:layout_above="@+id/edit_Bait"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Bait"
        android:id="@+id/textView3"
        android:layout_above="@+id/edit_Location"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Location"
        android:id="@+id/textView4"
        android:layout_above="@+id/edit_Weather"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Weather"
        android:id="@+id/textView5"
        android:layout_above="@+id/edit_Date"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Date"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/edit_Date"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/View_Button"
        android:id="@+id/button_ListAll"
        android:layout_marginTop="72dp"
        android:layout_below="@+id/edit_Date"
        android:layout_toEndOf="@+id/button_Add"
        android:layout_marginStart="40dp"
        android:background="#769dd4"
        android:textColor="#fefafa" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:spinnerMode="dialog"
        android:layout_above="@+id/edit_Weight"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView4"
        android:touchscreenBlocksFocus="false"
        android:backgroundTint="#7c9dbc" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:spinnerMode="dialog"
        android:layout_above="@+id/edit_Location"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignStart="@+id/edit_Weather"
        android:spinnerMode="dialog"
        android:layout_alignParentEnd="true" />


</RelativeLayout>



</FrameLayout>
