<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="wit.ie.mightyangler.Fragments.EditDataFragment">

    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Confirm"
            android:id="@+id/editButton"
            android:background="#769dd4"
            android:textColor="#fefafa"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:visibility="invisible" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="---Select record to edit---"
            android:id="@+id/editTitle"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/editButton"
            android:textAlignment="center" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editSpinner"
            android:layout_below="@+id/editTitle"
            android:layout_centerHorizontal="true"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/speciesText"
            android:layout_alignBottom="@+id/speciesTitle"
            android:textSize="16dp"
            android:layout_toEndOf="@+id/speciesTitle"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:visibility="invisible"
            android:editable="true" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Species"
            android:id="@+id/speciesTitle"
            android:layout_below="@+id/editSpinner"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Weight"
            android:id="@+id/weightTitle"
            android:layout_below="@+id/speciesTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:visibility="invisible" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/weightText"
            android:layout_alignBottom="@+id/weightTitle"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/speciesTitle"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:visibility="invisible" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/baitText"
            android:layout_above="@+id/locationTitle"
            android:textSize="16dp"
            android:layout_alignStart="@+id/weightText"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:visibility="invisible"
            android:editable="true" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Bait"
            android:id="@+id/baitTitle"
            android:layout_below="@+id/weightTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:visibility="invisible" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/locationText"
            android:layout_alignBottom="@+id/locationTitle"
            android:textSize="16dp"
            android:layout_alignStart="@+id/baitText"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:visibility="invisible" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Location"
            android:id="@+id/locationTitle"
            android:layout_below="@+id/baitTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/weatherText"
            android:layout_alignBottom="@+id/weatherTitle"
            android:textSize="16dp"
            android:layout_alignStart="@+id/locationText"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:visibility="invisible"
            android:editable="true" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Weather"
            android:id="@+id/weatherTitle"
            android:layout_below="@+id/locationTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:visibility="invisible" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/dateText"
            android:drawableRight="@drawable/ic_insert_invitation_24dp"
            android:onClick="datePicker"
            android:layout_alignBottom="@+id/dateTitle"
            android:layout_toEndOf="@+id/dateTitle"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:visibility="invisible" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Date"
            android:id="@+id/dateTitle"
            android:layout_below="@+id/weatherTitle"
            android:layout_alignParentStart="true"
            android:layout_marginTop="20dp"
            android:visibility="invisible" />


    </RelativeLayout>

</FrameLayout>
